--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,5 +6,6 @@ sql:
     gen:
       go:
         emit_json_tags: true
+        emit_empty_slices: true
         package: "db"
         out: "./db/sqlc"
