--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,5 +7,6 @@ sql:
       go:
         emit_json_tags: true
         emit_empty_slices: true
+        emit_interface: true
         package: "db"
         out: "./db/sqlc"
