--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ name: ci-test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "grpc" ]
   pull_request:
     branches: [ "main" ]
 
