add console logging

--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
+ENV=development
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:mysecret@localhost:5432/simple_todo?sslmode=disable
 MIGRATION_URL=file://db/migration
